<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ボタン"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00B8D4"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/Fortune_Telling"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFAB00"
        android:gravity="center"
        android:text="@string/fortune_telling"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView

        android:id="@+id/Lucky_Card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:text="@string/lucky_card"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.109"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Fortune_Telling"
        app:layout_constraintVertical_bias="0.074" />

    <ImageView
        android:id="@+id/Lucky_Cardimage"
        android:layout_width="132dp"
        android:layout_height="154dp"
        android:layout_marginLeft="1dp"
        android:src="@drawable/z02"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/Today_fortune"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Fortune_Telling"
        app:layout_constraintVertical_bias="0.316" />

    <TextView
        android:id="@+id/Today_fortune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="#E1F37D"
        android:text="@string/today_fortune"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.841"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Fortune_Telling"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Result_Fortune"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginLeft="136dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="16dp"
        android:background="#D5CCBBD8"
        android:text=""
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/Lucky_Card"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/Lucky_Cardimage"
        app:layout_constraintTop_toBottomOf="@id/Today_fortune"
        app:layout_constraintVertical_bias="0.157" />

    <Button
        android:id="@+id/Let_fortuneBtn"
        android:layout_width="154dp"
        android:layout_height="112dp"
        android:text="@string/let_fortune_telling"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Result_Fortune"
        app:layout_constraintVertical_bias="0.515" />
    <Button
        android:id="@+id/restartBtn"
        android:layout_width="154dp"
        android:layout_height="112dp"
        android:text="@string/restart"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Result_Fortune"
        android:layout_marginTop="300dp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>